# routes/userRoutes.js
@@ -1,5 +1,5 @@
 import  express  from "express";
-import  {addUser, deleteAllUsers, deleteUser, disableUser, forgotPassword, getUserById, getUsers, login, resetPassword, updateUser}  from "../controllers/userControllers.js"
+import  {addUser, deleteUser, disableUser, forgotPassword, getUserById, getUsers, login, resetPassword, updateUser}  from "../controllers/userControllers.js"
 import {isAuth} from "../middlewares/auth.js"
 import { checkRole } from "../middlewares/checkRole.js";
 import validorId from "../middlewares/validatorId.js"
@@ -7,20 +7,20 @@ const router = express.Router();
 
 
 // Route for login
-router.post('/users/login', login)
+router.post('/auth/login', login)
 
 // Route for forgot password
-router.post('/users/forgetPassword', forgotPassword)
+router.post('/auth/forgetPassword', forgotPassword)
 
 // Route for reset the password
-router.post('/users/requestPasswordReset/:id/:token' , validorId, resetPassword)
+router.post('/auth/requestResetPassword' , resetPassword )
 
 // Route for added a new user
-router.post('/users/createNewUser', isAuth, (req, res, next)=> checkRole(["Super Admin"], req, res, next),
+router.post('/users/Create', isAuth, (req, res, next)=> checkRole(["Super Admin"], req, res, next),
 addUser) 
 
 // Disable User
-router.post( '/disableUser/:id',isAuth,(req, res, next)=> checkRole(['Super Admin'], req, res, next), 
+router.patch( '/users/disable/:id',isAuth,(req, res, next)=> checkRole(['Super Admin'], req, res, next), 
 validorId, disableUser );
 
 // Route for the display all users
@@ -28,19 +28,17 @@ router.get('/users', isAuth, (req, res, next)=> checkRole(["Super Admin"], req, 
 getUsers)
 
 // route for displaying the information of a user whose identifier is known
-router.get('/users/:id', isAuth, (req, res, next)=> checkRole(["Super Admin"], req, res, next), 
+router.get('/usersById/:id', isAuth, (req, res, next)=> checkRole(["Super Admin"], req, res, next), 
 validorId, getUserById)                      
 
 // Route for deletion of a well-defined user
 router.delete('/users/delete/:id',isAuth,(req, res, next)=> checkRole(["Super Admin"], req, res, next),
 validorId, deleteUser)
 
-// Route for delete all users
-router.delete('/users/deleteAll', isAuth,(req, res, next)=> checkRole(["Super Admin"], req, res, next),
-deleteAllUsers)
+
 
 // Updating a user for which the identifier is known
-router.put('/users/update/:id', isAuth, (req, res, next)=> checkRole(['Super Admin','Director', 'Administration Director', 'Administration Assistant', 'Team Manager', 'Software Enginner'], req, res, next), 
+router.put('/users/:id', isAuth, (req, res, next)=> checkRole(['Super Admin','Director', 'Administration Director', 'Administration Assistant', 'Team Manager', 'Software Enginner'], req, res, next), 
 validorId,updateUser)
 
 
